# instant-mrjp

./: .gitignore  Makefile  README.md  ROADMAP.txt  _lattec._cabal  arr  arr.lat  arr.s  bad013  basic  basic.dbg  basic.lat  basic.s  booltest  booltest.__s  booltest.lat  booltest.s  cls  cls.asm  cls.lat  core019  core023  doit.sh  dupen.txt  dupenhaben.txt  example  example.lat  example.loh  example.s  example_.s  gengen.txt  instant-lang.cabal  pack.sh  package.yaml  play  play.lat  play.out  play.s  play_fck  play_fck.lat  (+34 more)
.github/workflows/: build.yml
.stack-work/: stack.sqlite3
app/insc_jvm/: Main.hs
cli/insc_jvm/: JVM.hs
cli/insc_llvm/: LLVM.hs
cli/lattec/: X86.hs
lib/: runtime
src/: Instant.hs  Latte.hs  _Main.hs
src/Backend/: Base.hs
src/IR/: Class.hs  Compl.hs  Identifiers.hs  Loc.hs  Phi.hs  Registers.hs  Size.hs  Types.hs  Utils.hs
src/Instant/: Backend.hs  Interpret.hs  JVM.hs  LLVM.hs  Logs.hs  PP.hs  Parse.hs  Syntax.hs
src/Latte/: Compiler.hs  Config.hs
src/Linearized/: BuiltIns.hs  Converter.hs  Def.hs  Env.hs  IRConverter.hs  Linearizer.hs  Syntax.hs
src/Optimizer/: ConstPropagation.hs  Def.hs  Env.hs  Optimizer.hs  ReturnChecker.hs
src/Parser/: Latte.cf  Parser.hs  Transform.hs  Types.hs
src/Program/: Syntax.hs
src/Reporting/: Logs.hs
src/Runtime/: asm_externs  runtime.c  runtime.h  runtime.s
src/Typings/: Checker.hs  Debug.hs  Def.hs  Env.hs  InheritanceHierarchy.hs  TopLevelCollector.hs  TypeChecking.hs  Types.hs
src/Utils/: C3.hs  Graphs.hs  Similarity.hs  Time.hs
src/_frontend/: ConstantFolder.dyn_hi  ConstantFolder.hs
src/backend/: Assembly.hs  CleanupX86.hs  CommonExpSubstitution.hs  Emit.hs  FrontendBackendTranslator.hs  LinearRepresentation.hs  LivenessAnalysis.hs  RefCount.hs  RegisterAllocation.hs  (+1 more)
tests/: r.bc
(+778 files in other folders)
