cabal-version: 1.12

name:           instant-lang
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/styczynski/instant-mrjp#readme>
homepage:       https://github.com/styczynski/instant-mrjp
bug-reports:    https://github.com/styczynski/instant-mrjp/issues
author:         Piotr Styczyński
maintainer:     piotr@styczynski.in
copyright:      2023 Piotr Styczyński
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    LICENSE
    README.md

source-repository head
  type: git
  location: https://github.com/styczynski/instant-mrjp

library
  exposed-modules:
      Instant
      Instant.Interpret
      Instant.JVM
      Instant.LLVM
      Instant.Parse
      Instant.PP
      Instant.Syntax
  hs-source-dirs:
      src
  default-extensions:
      MultiWayIf
      KindSignatures
      LambdaCase
      GADTs
      DataKinds
  other-modules:
    Paths_instant_lang
  build-depends:
      base >=4.8 && <5
    , containers
    , mtl
    , parser-combinators
    , filepath
    , megaparsec
  default-language: Haskell2010

executable insc_llvm
  main-is: Main.hs
  other-modules:
      Paths_instant_lang
  hs-source-dirs:
      app/insc_llvm
  ghc-options: -threaded -O3 -Wall -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.8 && <5
    , filepath
    , instant-lang
    , process
  default-language: Haskell2010

executable insc_jvm
  main-is: Main.hs
  other-modules:
      Paths_instant_lang
  hs-source-dirs:
      app/insc_jvm
  ghc-options: -threaded -O3 -Wall -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.8 && <5
    , filepath
    , instant-lang
    , process
  default-language: Haskell2010